gobmkida/c2/has_neighbor
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/has_neighbor/src/engine/board.c:2911:22: error: use of undeclared identifier 'byte_9B389F'
&& ( unsigned __int8)byte_9B389F[pos] != color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/has_neighbor/src/engine/board.c:2912:22: error: use of undeclared identifier 'byte_9B388C'
&& ( unsigned __int8)byte_9B388C[pos] != color ) 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/has_neighbor/src/obj/1/board.o] Error 1
